Após implementado o fluxo de caixa com lançamentos